force-app/main/default/objects/KimbleOne__InvoiceAdjustment__c/KimbleOne__InvoiceAdjustment__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Invoice Adjustment</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Invoice Adjustment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>