force-app/main/default/objects/KimbleOne__InvoiceAdjustment__c/fields/KimbleOne__DeliveryGroup__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryGroup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Delivery Engagement</label>
    <referenceTo>KimbleOne__DeliveryGroup__c</referenceTo>
    <relationshipLabel>Invoice Adjustments</relationshipLabel>
    <relationshipName>InvoiceAdjustments</relationshipName>
    <type>Lookup</type>
</CustomField>