force-app/main/default/objects/KimbleOne__InvoiceAdjustment__c/fields/KimbleOne__InvoiceAdjustmentReason__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoiceAdjustmentReason__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Reason</label>
    <referenceTo>KimbleOne__InvoiceAdjustmentReason__c</referenceTo>
    <relationshipLabel>Invoice Adjustments</relationshipLabel>
    <relationshipName>InvoiceAdjustments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>