force-app/main/default/objects/KimbleOne__InvoiceAdjustment__c/fields/KimbleOne__PurchaseOrderAllocationItem__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PurchaseOrderAllocationItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order Allocation Item</label>
    <referenceTo>KimbleOne__PurchaseOrderAllocationItem__c</referenceTo>
    <relationshipLabel>Invoice Adjustments</relationshipLabel>
    <relationshipName>InvoiceAdjustments</relationshipName>
    <type>Lookup</type>
</CustomField>